MDEV-7593: Default encryption key does not work correctly for page encrypted tables

Introduced a new innodb_default_page_encryption_key configuration
variable to allow user to set the default key identifier.